--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "store-analyzer-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "license": "MIT",
+  "type": "commonjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npx playwright install chromium"
   },
   "dependencies": {
-    "@playwright/test": "^1.44.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "playwright": "^1.48.0"
   }
 }
