--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "npx playwright install chromium"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "playwright": "^1.48.0"
+    "@playwright/browser-chromium": "1.48.0"
   }
 }
